guard against nullptr when trying to import a file

BUG: 490203
BUG: 492043